--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<!-- Стрічки використані в програмі -->
 <resources>
     <string name="app_name">Painter</string>
     <string name="create">Створити</string>
